[package]
name = "perstruct-proc-macros"
version = "0.1.0"
edition = "2021"
authors = ["Orvar Segerström"]
readme = "README.md"
description = "Utility macro for adding persistent backing to a struct"
repository = "https://github.com/0rvar/perstruct"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
serde_json = "1.0.111"
proc-macro2 = "1.0.78"
